--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -28,7 +28,7 @@
                 <a href="https://www.instagram.com/torneind/" target="_blank"><img
                             src="{{ asset('/iconos/Instagram.png') }}"
                             alt="FotoLogo1"></a>
-                <a href="https://discord.com/" target="_blank"><img src="{{ asset('/iconos/discord.png') }}"
+                <a href="https://discord.gg/CM9GJp5m" target="_blank"><img src="{{ asset('/iconos/discord.png') }}"
                                                                     alt="FotoLogo2"></a>
                 <a href="https://twitter.com/?lang=es" target="_blank"><img src="{{ asset('/iconos/twitter.png') }}"
                                                                             alt="FotoLogo3"></a>
