--- a/templates/security/profile.html.twig
+++ b/templates/security/profile.html.twig
@@ -174,6 +174,7 @@
                                             <h4 class="texto-no-torneos"> ¡ NO HAS VINCULADO CUENTAS !</h4>
                                             {% endif %}
                                         </div>
+
                                         <a class="link-iconos text-center" href="{{ path('vinculation-account') }}">
                                             <button type="button" class="btn btn-outline-dark mb-1 mr-2 ml-2"> Vincular cuenta
                                                 <i class="fas fa-external-link-square-alt"></i>
@@ -235,6 +236,17 @@
                                         </button>
                                     </a>
                                 </div>
+                                <div class="col-12">
+                                    <div class="dropdown-divider"></div>
+                                    <h4 class="texto-mostrar-mensajes">Directo</h4>
+                                </div>
+                                {% if usuario.retranmision %}
+                                    <iframe width="1280" height="720" src="{{ app.user.retranmision }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                {% else %}
+
+                                    <h4 class="texto-no-torneos"> ¡ ESTE USUARIO NO ESTA EN DIRECTO !</h4>
+                                {% endif %}
+                            </div>
                             </div>
                         </div>
                     </div>
