--- a/templates/torneo/show.html.twig
+++ b/templates/torneo/show.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <body>
 <div class="container-fluid">
-    <div class="row row-view-torneo">
+    <div class="row mb-5">
         <div class="col-1"></div>
         <div class="col-5">
             <img class="img-fluid" src="{{ asset( posters_dir  ~ '/'~ torneo.imagen) }}">
@@ -32,17 +32,56 @@
                     <th>Fecha</th>
                     <td>{{ torneo.fecha ? torneo.fecha|date('Y-m-d') : '' }} -- {{ torneo.fecha ? torneo.fecha|date('H:m') }}</td>
                 </tr>
+                <tr>
+                    <th>Ganador</th>
+                    <td>jjjjjj</td>
+                </tr>
                 </tbody>
             </table>
+            {% if is_granted('ROLE_ADMIN') %}
+                <a href=""><button type="button" class="btn btn-success mb-2"><i class="fas fa-trophy-alt iconos-font"></i> Dar ganador</button></a>
+                <div class="modal" tabindex="-1">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">Modal title</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p>Modal body text goes here.</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
             <a href="{{ path('torneo_index') }}"> <button type="button" class="btn btn-dark mb-2"><i class="fas fa-arrow-circle-left"></i> Volver atrás</button></a>
             {% if (app.user) %}
             <a href="{{ path('inscripcion_new', {'id': torneo.id}) }}"> <button type="button" class="btn btn-primary mb-2"><i class="fas fa-gamepad"></i> Inscribírse</button></a>
             {% else %}
             <a href="{{ path('login') }}"> <button type="button" class="btn btn-primary mb-2"><i class="fas fa-gamepad"></i> Inscribírse</button></a>
             {% endif %}
+
             {% if is_granted('ROLE_ADMIN') %}
             <a href="{{ path('torneo_edit', {'id': torneo.id}) }}"><button type="button" class="btn btn-warning mb-2"><i class="fas fa-pencil-alt iconos-font"></i> Editar torneo</button></a>
             {{ include('torneo/_delete_form.html.twig') }}
+            {% endif %}
+        </div>
+        <div class="col-1"></div>
+    </div>
+</div>
+<div class="container-fluid">
+    <div class="row mt-5">
+        <div class="col-1"></div>
+        <div class="col-10 text-center texto-no-torneos">
+        PARTIDA EN DIRECTO
+            {% if (torneo.retransmision) %}
+            <iframe width="1280" height="720" src="{{ torneo.retransmision }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            {% else %}
+                <h1 class="texto-no-torneos text-danger"> ¡ NO SE ESTA JUGANDO EL TORNEO ! </h1>
             {% endif %}
         </div>
         <div class="col-1"></div>
