--- a/templates/Others/compartir.html.twig
+++ b/templates/Others/compartir.html.twig
@@ -3,11 +3,10 @@
 {% block body %}
     <body id="color-body-compartir">
     <div class="container-fluid">
-        <div class="row">
             <div class="col-12 d-flex flex-column">
                 <div class="site mt-5">
                     <p class="titulo-compartir"> ¡ COMPARTE TORNEIND CON EL MUNDO !</p>
-                    <div class="wrapper2">
+                    <div class="col-12 wrapper2">
                         <a href='https://www.facebook.com/sharer/sharer.php?u=https://www.torneind.es/es/' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360');" class="link-iconos"><div class="bg-ico" id="facebook"><i class="fab fa-facebook social  facebook fa-3x"></i></div></a>
                         <a href="https://web.telegram.org/z/" class="link-iconos"><div class="bg-ico" id="pinterest"><i class="fab fa-telegram social  telegram fa-3x"></i></div></a>
                         <a href='https://twitter.com/intent/tweet?url=https://www.torneind.es/es/' rel='nofollow' target='_blank' onClick="window.open(this.href,this.target,'width=500,height=500,top=210,left=360');" class="link-iconos"><div class="bg-ico" id="twitter"><i class="fab fa-twitter social  twitter fa-3x"></i></div></a>
@@ -16,8 +15,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </div>
-
     </body>
 {% endblock %}
