--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,13 +4,21 @@
     <title>{% block title %}Torneind 🎮{% endblock %}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+            integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+            integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+            crossorigin="anonymous"></script>
     <link rel="shortcut icon" type="image/x-icon" href="{{ asset('/logos/sin-fondo.png') }}"/>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-L+XK540vkePe55E7PAfByfvW0XpsyYpsifTpgh/w8WvH6asVg/c2zqp0EfZfZTbF" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.9/css/all.css"
+          integrity="sha384-L+XK540vkePe55E7PAfByfvW0XpsyYpsifTpgh/w8WvH6asVg/c2zqp0EfZfZTbF" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
+            type="text/javascript"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.js'></script>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
     <script src='https://code.jquery.com/jquery-1.12.4.js'></script>
@@ -19,9 +27,9 @@
         <link rel="stylesheet" href="{{ asset('/css/grids/grid.css') }}">
     {% endblock %}
     {% block javascripts %}
-        <script src="{{ asset('/js/stats.js') }}"> </script>
-        <script src="{{ asset('/js/config.js') }}"> </script>
-        <script src="{{ asset('/js/cosmeticos.js') }}"> </script>
+        <script src="{{ asset('/js/stats.js') }}"></script>
+        <script src="{{ asset('/js/config.js') }}"></script>
+        <script src="{{ asset('/js/cosmeticos.js') }}"></script>
 
     {% endblock %}
 </head>
@@ -74,22 +82,29 @@
                     {% endif %}
                     {% if is_granted('ROLE_USER') %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('usuarios') }}"><img class="iconos-nav" src="{{ asset('/iconos/Icono-gente.png') }}" alt="icon-gestion-users">Descubrir gente</a>
+                            <a class="nav-link" href="{{ path('usuarios') }}"><img class="iconos-nav"
+                                                                                   src="{{ asset('/iconos/Icono-gente.png') }}"
+                                                                                   alt="icon-gestion-users">Descubrir
+                                gente</a>
                         </li>
                     {% endif %}
 
                     {% if ( app.user ) %}
-                    {% if ( app.user.foto is null) %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('perfil') }}"><img class="iconos-nav rounded-circle" src="{{ asset('/iconos/foto-perfil-defecto.png') }}" alt="icon-profile"> {{ app.user.nombre }}
-                            </a>
-                        </li>
-                    {% else %}
-                    <li class="nav-item">
-                            <a class="nav-link" href="{{ path('perfil') }}"><img class="iconos-nav rounded-circle" src="{{ asset( posters_dir  ~ '/'~ app.user.foto) }}" alt="icon-profile"> {{ app.user.nombre }}
-                            </a>
-                        </li>
-                    {% endif %}
+                        {% if ( app.user.foto is null) %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('perfil') }}"><img class="iconos-nav rounded-circle"
+                                                                                     src="{{ asset('/iconos/foto-perfil-defecto.png') }}"
+                                                                                     alt="icon-profile"> {{ app.user.nombre }}
+                                </a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('perfil') }}"><img class="iconos-nav rounded-circle"
+                                                                                     src="{{ asset( posters_dir  ~ '/'~ app.user.foto) }}"
+                                                                                     alt="icon-profile"> {{ app.user.nombre }}
+                                </a>
+                            </li>
+                        {% endif %}
                     {% endif %}
                 </div>
             </nav>
@@ -128,16 +143,22 @@
             </div>
             <div class="col-2 items">
                 <h3 class="titols-footer">Contacta con nosotros.</h3>
-                <a href="{{ path('contact') }}"><img class="iconos-footer" height="45px" src="{{ asset('/iconos/Contacto.png') }}"
+                <a href="{{ path('contact') }}"><img class="iconos-footer" height="45px"
+                                                     src="{{ asset('/iconos/Contacto.png') }}"
                                                      alt="icono-footer"></a>
             </div>
             <div class="col-2 items">
                 <h3 class="titols-footer">Otros</h3>
-                <a href="{{ path('privacidad') }}"><img class="iconos-footer" src="{{ asset('/iconos/Privacidad.png') }}"
-                                 alt="icono-footer"></a>
-                <a href="{{ path('salud') }}"><img class="iconos-footer" src="{{ asset('/iconos/Corazon.png') }}" alt="icono-footer"></a>
-                <a  href="{{ path('sitemap') }}"><img class="iconos-footer" src="{{ asset('/iconos/siteMAP.png') }}" alt="icono-footer"></a>
-                <a  href="{{ path('compartir') }}"><img class="iconos-footer" src="{{ asset('/iconos/icono-compartir2.png') }}" alt="icono-footer-compartir"></a>
+                <a href="{{ path('privacidad') }}"><img class="iconos-footer"
+                                                        src="{{ asset('/iconos/Privacidad.png') }}"
+                                                        alt="icono-footer"></a>
+                <a href="{{ path('salud') }}"><img class="iconos-footer" src="{{ asset('/iconos/Corazon.png') }}"
+                                                   alt="icono-footer"></a>
+                <a href="{{ path('sitemap') }}"><img class="iconos-footer" src="{{ asset('/iconos/siteMAP.png') }}"
+                                                     alt="icono-footer"></a>
+                <a href="{{ path('compartir') }}"><img class="iconos-footer"
+                                                       src="{{ asset('/iconos/icono-compartir2.png') }}"
+                                                       alt="icono-footer-compartir"></a>
 
             </div>
 
