--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -481,7 +481,7 @@ td {
 #fondo-crear-editar-forms {
     background-image: url("../fotos-web/general/fondo-forms.jpeg");
     background-repeat: no-repeat;
-    background-color: #ecf0f1;
+    background-color: #000000;
 }
 
 #fondo-contacto {
