--- a/templates/torneo/show.html.twig
+++ b/templates/torneo/show.html.twig
@@ -39,7 +39,7 @@
                 </tbody>
             </table>
             {% if is_granted('ROLE_ADMIN') %}
-                <a href=""><button type="button" class="btn btn-success mb-2"><i class="fas fa-trophy-alt iconos-font"></i> Dar ganador</button></a>
+                <a href="{{ path('torneo_ganador') }}"><button type="button" class="btn btn-success mb-2"><i class="fas fa-trophy-alt iconos-font"></i> Dar ganador</button></a>
                 <div class="modal" tabindex="-1">
                     <div class="modal-dialog">
                         <div class="modal-content">
