--- a/templates/Others/comunidad.html.twig
+++ b/templates/Others/comunidad.html.twig
@@ -1,20 +1,15 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <body>
     <div class="container-fluid ">
         <div class="row justify-content-center row-futuro">
             <div class="col-7">
                 <div class="card tarjeta-futuro shadow-lg p-3 mb-5 bg-white rounded">
-                    <h5 class="texto-no-torneos"> PRÓXIMAMENTE EN LA VERSIÓN 1.0</h5>
+                    <h5 class="texto-no-torneos"> PRÓXIMAMENTE EN LA VERSIÓN 1.0...</h5>
                     <div class="card-body">
                         <h5 class="card-title texto-profile-ver">Un foro donde la gente puede compartir sus mejores jugadas y ser puntuadas por otras personas. </h5>
                     </div>
                 </div>
-
             </div>
-
         </div>
     </div>
-
-    </body>
 {% endblock %}
