--- a/templates/Others/sitemap.html.twig
+++ b/templates/Others/sitemap.html.twig
@@ -11,13 +11,24 @@
                 <a class="aNegra" href="{{ path('contact') }}">Soporte</a><br><br>
                 <a class="aNegra" href="{{ path('tienda') }}">Tienda</a><br><br>
                 <a class="aNegra" href="{{ path('cosmeticos') }}">Cosméticos</a><br><br>
+                {% if is_granted('ROLE_USER') %}
+                    <a class="aNegra" href="{{ path('perfil') }}">Perfil</a><br><br>
+                    <a class="aNegra" href="{{ path('vinculation-account') }}">Vincular Cuenta Juego</a><br><br>
+                {% endif %}
             </div>
             <div class="col-5 cardSiteMap">
                 <a class="aNegra" href="{{ path('nuestroMapa') }}">Nuestro Mapa</a><br><br>
                 <a class="aNegra" href="{{ path('registration') }}">Registrarse</a><br><br>
                 <a class="aNegra" href="{{ path('login') }}">Iniciar Sesión</a><br><br>
-                <a class="aNegra" href="{{ path('contact') }}">Política de privacidad</a><br><br>
+                <a class="aNegra" href="{{ path('contact') }}">Política De Privacidad</a><br><br>
                 <a class="aNegra" href="{{ path('salud') }}">Salud</a><br><br>
+                {% if is_granted('ROLE_USER') %}
+                    <a class="aNegra" href="{{ path('perfil') }}">Perfil</a><br><br>
+                    <a class="aNegra" href="{{ path('usuarios') }}">Descubrir Gente</a><br><br>
+                {% endif %}
+                {% if is_granted('ROLE_ADMIN') %}
+                    <a class="aNegra" href="{{ path('usuario_index') }}">Gestión Usuarios</a><br><br>
+                {% endif %}
             </div>
         </div>
     </div>
