--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
             integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
@@ -30,7 +30,6 @@
         <script src="{{ asset('/js/stats.js') }}"></script>
         <script src="{{ asset('/js/config.js') }}"></script>
         <script src="{{ asset('/js/cosmeticos.js') }}"></script>
-
     {% endblock %}
 </head>
 <header>
@@ -156,8 +155,8 @@
                                                    alt="icono-footer"></a>
                 <a href="{{ path('sitemap') }}"><img class="iconos-footer" src="{{ asset('/iconos/siteMAP.png') }}"
                                                      alt="icono-footer"></a>
-                <a href="{{ path('compartir') }}"><img class="iconos-footer"
-                                                       src="{{ asset('/iconos/icono-compartir2.png') }}"
+                <a href="{{ path('compartir') }}"><img class="icono-footer-compartir"
+                                                       src="{{ asset('/iconos/icono-compartir-1.png') }}"
                                                        alt="icono-footer-compartir"></a>
 
             </div>
