--- a/templates/torneo/index.html.twig
+++ b/templates/torneo/index.html.twig
@@ -28,7 +28,8 @@
                     <div class="container-fluid">
                         <form method="get" class="row">
                             <div class="col-6 collapse navbar-collapse">
-                                <input name="nombre" class="form-control me-2" type="search" placeholder="Buscar por nombre..."
+                                <input name="nombre" class="form-control me-2" type="search"
+                                       placeholder="Buscar por nombre..."
                                        aria-label="Buscar">
                             </div>
                             <div class="col-6 d-flex text-end">
@@ -66,96 +67,103 @@
     </div>
 
     {% if pagination %}
-    <div class="col-12 tabla">
-        <div class="col-10">
-            <table class="table table-striped table-bordered table-hover ">
-                <thead>
-                {% if is_granted('ROLE_ADMIN') %}
-                    <a href="{{ path('torneo_new') }}">
-                        <button type="button" class="btn btn-primary mb-2"><i
-                                    class="fas fa-plus"></i> Nuevo
-                            Torneo
-                        </button>
-                    </a>
-                {% endif %}
-                <tr>
-                    <th>Nombre</th>
-                    <th>Fecha</th>
-                    <th>Hora</th>
-                    <th>Modo</th>
-                    <th>Plataforma</th>
-                    <th>Insribírse</th>
-                    <th>Acciones</th>
-                </tr>
-                </thead>
-                {% for torneo in pagination %}
-                <tbody>
-                <tr>
-                    <td>{{ torneo.nombre }}</td>
-                    <td>{{ torneo.fecha ? torneo.fecha|date('d/m/Y') }}</td>
-                    <td>{{ torneo.fecha ? torneo.fecha|date('H:m') }}</td>
-                    <td>{{ torneo.modalidad.modalidad }}</td>
-                    <td>{{ torneo.plataforma.plataforma }}</td>
-                    {% if (app.user) %}
-                    <td><a class="registro" href="{{ path('inscripcion_new', {'id': torneo.id}) }}"><button type="button" class="btn btn-primary">Inscríbirse</button></a>
-                     {% else %}
-                    <td><a class="registro" href="{{ path('login')}}"><button type="button" class="btn btn-primary">Inscríbirse</button></a>
-                      {% endif %}
-                    </td>
-                    <td>
-                        {% if is_granted('ROLE_ADMIN') %}
-                            <a class="link-iconos" href="{{ path('torneo_delete', {'id': torneo.id}) }}">
-                                <button type="button" class="btn btn-danger"><i class="fas fa-trash-alt"></i>
+        <div class="col-12 tabla">
+            <div class="col-10">
+                <table class="table table-striped table-bordered table-hover ">
+                    <thead>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <a href="{{ path('torneo_new') }}">
+                            <button type="button" class="btn btn-primary mb-2"><i
+                                        class="fas fa-plus"></i> Nuevo
+                                Torneo
+                            </button>
+                        </a>
+                    {% endif %}
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Fecha</th>
+                        <th>Hora</th>
+                        <th>Modo</th>
+                        <th>Plataforma</th>
+                        <th>Insribírse</th>
+                        <th>Acciones</th>
+                    </tr>
+                    </thead>
+                    {% for torneo in pagination %}
+                    <tbody>
+                    <tr>
+                        <td>{{ torneo.nombre }}</td>
+                        <td>{{ torneo.fecha ? torneo.fecha|date('d/m/Y') }}</td>
+                        <td>{{ torneo.fecha ? torneo.fecha|date('H:m') }}</td>
+                        <td>{{ torneo.modalidad.modalidad }}</td>
+                        <td>{{ torneo.plataforma.plataforma }}</td>
+                        {% if (app.user) %}
+                        <td><a class="registro" href="{{ path('inscripcion_new', {'id': torneo.id}) }}">
+                                <button type="button" class="btn btn-primary">Inscríbirse</button>
+                            </a>
+                            {% else %}
+                        <td><a class="registro" href="{{ path('login') }}">
+                                <button type="button" class="btn btn-primary">Inscríbirse</button>
+                            </a>
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <a class="link-iconos" href="{{ path('torneo_winer', {'id': torneo.id}) }}">
+                                    <button type="button" class="btn btn-success"><i
+                                                class="fas fa-trophy-alt iconos-font"></i></button>
+                                </a>
+                                <a class="link-iconos" href="{{ path('torneo_delete', {'id': torneo.id}) }}">
+                                    <button type="button" class="btn btn-danger"><i class="fas fa-trash-alt"></i>
+                                    </button>
+                                </a>
+                                <a class="link-iconos" href="{{ path('torneo_edit', {'id': torneo.id}) }}">
+                                    <button type="button"
+                                            class="btn btn-warning "><i
+                                                class="fas fa-pencil-alt iconos-font"></i></button>
+                                </a>
+                            {% endif %}
+                            <a class="link-iconos" href="{{ path('torneo_show', {'id': torneo.id}) }}">
+                                <button type="button" class="btn btn-info "><i class="far fa-eye iconos-font"></i>
                                 </button>
                             </a>
-                            <a class="link-iconos" href="{{ path('torneo_edit', {'id': torneo.id}) }}">
-                                <button type="button"
-                                        class="btn btn-warning "><i
-                                            class="fas fa-pencil-alt iconos-font"></i></button>
-                            </a>
-                        {% endif %}
-                        <a class="link-iconos" href="{{ path('torneo_show', {'id': torneo.id}) }}">
-                            <button type="button" class="btn btn-info "><i class="far fa-eye iconos-font"></i>
-
-                            </button>
-                        </a>
-                    </td>
-                </tr>
-                {% else %}
-                    <tr>
-                        <td class="texto-no-torneos" colspan="7">
-                            ¡ NO HAY TORNEOS DISPONIBLES !
                         </td>
                     </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
-    </div>
-    <div class="col-12">
-        <nav aria-label="Page navigation example">
-            {# PAGINADOR #}
-            <div class="mt-3">
-                <div class="navigation d-flex justify-content-center">
-                    {{ knp_pagination_render(pagination) }}
-                </div>
+                    {% else %}
+                        <tr>
+                            <td class="texto-no-torneos" colspan="7">
+                                ¡ NO HAY TORNEOS DISPONIBLES !
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
             </div>
-        </nav>
-    </div>
-        {% else %}
-
-            <div class="container-fluid mb-5">
-                <div class="row">
-                    <div class="col-12 text-center text-black-50">
-                        <a href="{{ path('torneo_new') }}">
-                            <button type="button" class="btn btn-primary"><i
-                                        class="fas fa-plus"></i> Crear Nuevo Torneo
-                            </button>
-                        </a>
+        </div>
+        <div class="col-12">
+            <nav aria-label="Page navigation example">
+                {# PAGINADOR #}
+                <div class="mt-3">
+                    <div class="navigation d-flex justify-content-center">
+                        {{ knp_pagination_render(pagination) }}
                     </div>
                 </div>
+            </nav>
+        </div>
+    {% else %}
+
+        <div class="container-fluid mb-5">
+            <div class="row">
+                <div class="col-12 text-center text-black-50">
+                    <a href="{{ path('torneo_new') }}">
+                        <button type="button" class="btn btn-primary"><i
+                                    class="fas fa-plus"></i> Crear Nuevo Torneo
+                        </button>
+                    </a>
+                </div>
             </div>
-        {% endif %}
+        </div>
+    {% endif %}
     </div>
     </body>
 {% endblock %}
