--- a/templates/torneo/show.html.twig
+++ b/templates/torneo/show.html.twig
@@ -34,29 +34,17 @@
                 </tr>
                 <tr>
                     <th>Ganador</th>
-                    <td>jjjjjj</td>
+                    {% if (torneo.ganador) %}
+                    <td>{{ torneo.ganador }}</td>
+                    {% else %}
+                    <td>El torneo aún no ha terminado.</td>
+                    {% endif %}
+
                 </tr>
                 </tbody>
             </table>
             {% if is_granted('ROLE_ADMIN') %}
-                <a href="{{ path('torneo_ganador') }}"><button type="button" class="btn btn-success mb-2"><i class="fas fa-trophy-alt iconos-font"></i> Dar ganador</button></a>
-                <div class="modal" tabindex="-1">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title">Modal title</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <p>Modal body text goes here.</p>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <a href="{{ path('torneo_winer', {'id': torneo.id}) }}"><button type="button" class="btn btn-success mb-2"><i class="fas fa-trophy-alt iconos-font"></i> Dar ganador</button></a>
             {% endif %}
             <a href="{{ path('torneo_index') }}"> <button type="button" class="btn btn-dark mb-2"><i class="fas fa-arrow-circle-left"></i> Volver atrás</button></a>
             {% if (app.user) %}
