--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,13 +1,12 @@
 {% extends 'base.html.twig' %}
 {% block title %}Contacto 📲 {% endblock %}
 {% block body %}
-    <body id="fondo-contacto">
     <div class="container-fluid mt-1">
         <div class="row">
             <div class="d-flex justify-content-center mt-1 row-contacto">
                 <div class="col-12 container-fluid d-flex flex-column flex-lg-row">
                     <div class="col-8">
-                        <div class="card">
+                        <div class="card shadow-lg p-3 mb-5 rounded">
                             <div class="card-header text-center texto-no-torneos">
                                 CONTACTO 📲
                             </div>
@@ -32,7 +31,7 @@
                         </div>
                     </div>
                     <div class="col-4 text-center ">
-                        <div class="card">
+                        <div class="card shadow-lg p-3 mb-5 rounded">
                             <div class="card-header texto-no-torneos">
                                 CHAT EN LÍNEA 🧑🏻‍🤝‍🧑🏻
                             </div>
@@ -42,15 +41,10 @@
                                         Chat en línea
                                     </button></a>
                             </div>
-
                         </div>
                     </div>
                 </div>
             </div>
-
-
         </div>
-
     </div>
-    </body>
 {% endblock %}
