--- a/templates/torneo/index.html.twig
+++ b/templates/torneo/index.html.twig
@@ -3,10 +3,9 @@
 {% block body %}
     <body>
     <div class="container-fluid mt-2">
-        <div class="row">
             <nav class="navbar navbar-expand-lg navbar-light bg-light" id="buscador">
                 <div class="container-fluid text-center">
-                    <div class="container-fluid">
+                    <div class="cool-12 container-fluid text-center">
                         <form method="get" class="row">
                             <div class="col-6 collapse navbar-collapse">
                                 <select name="categoria" class="form-select" aria-label="Default select example">
@@ -24,20 +23,6 @@
                             </div>
                         </form>
                     </div>
-
-                    <div class="container-fluid">
-                        <form method="get" class="row">
-                            <div class="col-6 collapse navbar-collapse">
-                                <input name="nombre" class="form-control me-2" type="search"
-                                       placeholder="Buscar por nombre..."
-                                       aria-label="Buscar">
-                            </div>
-                            <div class="col-6 d-flex text-end">
-                                <button class="btn btn-outline-info boton-buscar" type="submit">Buscar</button>
-                            </div>
-                        </form>
-                    </div>
-
                 </div>
             </nav>
             {# read and display all flash messages #}
@@ -49,10 +34,7 @@
                     </div>
                 {% endfor %}
             {% endfor %}
-
-        </div>
     </div>
-
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 text-center">
