--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,7 +51,9 @@
                         <a class="nav-link" href="{{ path('contact') }}">Soporte</a>
                         <a class="nav-link" href="{{ path('tienda') }}">Tienda</a>
                         <a class="nav-link" href="{{ path('cosmeticos') }}">Cosméticos</a>
+                        <a class="nav-link" href="{{ path('comunidad') }}">Comunidad</a>
                         <a class="nav-link" href="{{ path('nuestroMapa') }}">Nuestro Mapa</a>
+
                     </div>
                     {% if (app.user) %}
                         <li class="nav-item">
