--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -469,7 +469,7 @@ td {
 
 
 #boby-registro {
-    background-image: url("../fotos-web/general/foto-prueba-1.PNG");
+    background-image: url("../fotos-web/general/foro_register.png");
     background-repeat: no-repeat;
     background-color: #ecf0f1;
 }
