--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -4,7 +4,7 @@
 {% block body %}
     <body id="boby-registro">
     <div class="container-fluid">
-        <div class="d-flex row2">
+        <div class="d-flex row2 mb-5">
             <div class="col-4">
                 <form class="targeta-registrarse p-3" method="post" novalidate>
                     {{ form_start(form, {attr: {'novalidate': 'novalidate'}}) }}
