--- a/templates/torneo/index.html.twig
+++ b/templates/torneo/index.html.twig
@@ -5,7 +5,7 @@
         <div class="row">
             <nav class="navbar navbar-expand-lg navbar-light bg-light" id="buscador">
                 <div class="col-12 container-fluid">
-                    <div class="col-12 d-flex text-center">
+                    <div class="col-6 d-flex text-center">
                         <form method="get" class="row">
                             <div class="col-10 collapse navbar-collapse">
                                 <select name="categoria" class="form-select" aria-label="Default select example">
@@ -23,7 +23,17 @@
                             </div>
                         </form>
                     </div>
-
+                    <div class="col-6 d-flex text-center">
+                        <form method="get">
+                            <div class="col-12 d-flex">
+                                <input name="data" type="date" class="form-control col-5 campo-fecha mt-3">
+                                <input name="data2" type="date" class="form-control col-5 campo-fecha mt-3">
+                                <div class="col-2 d-flex text-end">
+                                    <button class="btn btn-outline-info boton-buscar" type="submit">Buscar</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </nav>
             {# read and display all flash messages #}
