--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -6,7 +6,7 @@
             <div class="d-flex justify-content-center mt-1 row-contacto">
                 <div class="col-12 container-fluid d-flex flex-column flex-lg-row">
                     <div class="col-8">
-                        <div class="card shadow-lg p-3 mb-5 rounded">
+                        <div class="shadow-lg p-3 mb-5 rounded">
                             <div class="card-header text-center texto-no-torneos">
                                 CONTACTO 📲
                             </div>
@@ -24,14 +24,14 @@
                                     </label>
                                 </div>
                                 <div class="col-12 justify-content-center d-flex">
-                                    <input type="submit" class="btn btn-primary justify-content-center mr-2 ml-2"/>
+                                   <a href=""><input type="submit" class="btn btn-primary justify-content-center mr-2 ml-2"/></a>
                                 </div>
                                 {{ form_end(our_form) }}
                             </div>
                         </div>
                     </div>
                     <div class="col-4 text-center ">
-                        <div class="card shadow-lg p-3 mb-5 rounded">
+                        <div class="shadow-lg p-3 mb-5 rounded">
                             <div class="card-header texto-no-torneos">
                                 CHAT EN LÍNEA 🧑🏻‍🤝‍🧑🏻
                             </div>
@@ -39,7 +39,8 @@
                                 <h5 class="texto-profile-ver mb-5">O si lo prefieres...</h5>
                                 <a class="mt-5" href="{{ path('chat-torneind') }}"><button type="button" class="btn btn-success">
                                         Chat en línea
-                                    </button></a>
+                                    </button>
+                                </a>
                             </div>
                         </div>
                     </div>
