--- a/templates/cosmeticos/cosmeticos.html.twig
+++ b/templates/cosmeticos/cosmeticos.html.twig
@@ -1,5 +1,29 @@
 {% extends 'base.html.twig' %}
 {% block title %}Cosméticos 🥼{% endblock %}
 {% block body %}
+    <div class="container-fluid">
+            <div class="col-12 d-flex flex-column flex-lg-row">
+                <div class="col-1"></div>
+                <div class="col-10">
+                    <h1 class="titulo-cosmeticos"> COSMÉTICOS </h1>
+                    <div class="col-12 d-flex flex-column flex-lg-row text-center">
+                        <div class="col-2"></div>
+                        <div class="col-8">
+                            <p>
+                                Esta es la pestaña de cosméticos, en ella podrás encontrar todo lo que hay actualmente en el juego y buscar lo que quieras. En una versión próxima se aplicarán  filtros de búsqueda avanzados… ¡ A navegar !
+                            </p>
+                        </div>
+                        <div class="col-2"></div>
+                    </div>
+                </div>
+                <div class="col-1"></div>
+            </div>
+    </div>
+
+                <div class="container-fluid">
+                    <div id="content" class="row">
+
+                    </div>
+                </div>
 
 {% endblock %}
