--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,13 +1,12 @@
 {% extends 'base.html.twig' %}
 {% block title %}Iniciar Sesión en Torneind{% endblock %}
 {% block body %}
-
     <body id="fondo-login">
     <div class="container-fluid mt-5">
 
         <div class="d-flex justify-content-center mt-5 row-login">
             <div class="col-5 mt-5">
-                <div class="card tarjeta-login">
+                <div class="tarjeta-login">
                     <div class="card-header text-center texto-no-torneos">
                         INICIAR SESIÓN
                     </div>
