--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -489,6 +489,15 @@ td {
     color: #1a1919;
 }
 
+.card-blanca{
+    background-color: white;
+}
+
+.card-users{
+    border: 1px solid rgb(0, 0, 0);
+
+}
+
 .card-win{
     padding-top: 100px;
     padding-bottom: 150px;
@@ -692,6 +701,16 @@ table th {
     font-size: 50px;
     text-align: center;
     text-decoration: none;
+}
+
+.titulo-cosmeticos{
+    font-family: 'Fortnite';
+    font-weight: bold;
+    -webkit-text-fill-color: #ff7070;
+    -webkit-text-stroke: 2px #000000;    font-size: 75px;
+    text-align: center;
+    text-decoration: none;
+
 }
 
 .aNegra:hover{
@@ -1162,4 +1181,152 @@ table th {
 /*ESTILOS CHAT--------------------------------------------------------------------------------------------------------*/
 #body-chat{
     background-color: beige;
+}
+
+/*ESTILOS Cosmeticos--------------------------------------------------------------------------------------------------------*/
+.div-foto {
+    position: relative;
+    display: grid;
+    height: 100%;
+    width: 100%;
+    align-content: end;
+    justify-content: center;
+}
+
+.card {
+    border: 3px solid rgb(0, 0, 0);
+}
+
+.card>.div-foto>img {
+    display: grid;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    vertical-align: middle;
+    border-style: none;
+    transition: 0.5s;
+}
+
+
+/*PARA QUE LA FOTO SE MUEVA AL PASAR POR ENCIMA*/
+
+.card:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+    background-blend-mode: screen;
+    border: 3px solid rgb(229, 255, 0);
+}
+
+.card:hover>.div-foto>img {
+    -webkit-transform: scale3d(1.05, 1.05, 1);
+    transform: scale3d(1.05, 1.05, 1);
+}
+
+
+/*--------------------------------------------------------*/
+
+.card-info {
+    background: rgba(0, 0, 0, 0.22);
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    overflow: hidden;
+    padding: 6px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h4.nombre {
+    overflow: hidden;
+    line-height: 1.3;
+    color: #fff;
+    margin: 0;
+    width: 100%;
+    white-space: nowrap;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
+    text-shadow: 0 0 7px rgba(0, 0, 0, 0.5);
+    transform: scale(1, 1.26);
+}
+
+
+/*PARA SI QUIERES QUE SE MUEVA EL TEXTO, EN CASO DE QUE NO LE QUITAS LO DE animado DE LA CLASE Y AU*/
+
+
+/*------------------------------------------------------*/
+
+p.que-es {
+    background: #000724;
+    perspective: 800px;
+    color: #fff;
+    margin: 0;
+    white-space: nowrap;
+    font-family: "Open sans", sans-serif;
+    text-transform: uppercase;
+    font-size: 10px;
+    letter-spacing: 0.033em;
+    text-align: center;
+    display: -webkit-flex;
+    -webkit-align-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.frozen {
+    background: radial-gradient(#52b8e6, #52b8e6);
+}
+
+.legendary {
+    background: radial-gradient(#d37c22, #d37c22);
+}
+
+.dark {
+    background: radial-gradient(#a5a5a5, #f021d8);
+}
+
+.marvel {
+    background: radial-gradient(#a5a5a5, #b72f2f);
+}
+
+.dc {
+    background: radial-gradient(#a5a5a5, #4a67b1);
+}
+
+.starwars {
+    background: radial-gradient(#a5a5a5, #142b5a);
+}
+
+.gaminglegends {
+    background: radial-gradient(#a5a5a5, #4538b9);
+}
+
+.iconseries {
+    background: radial-gradient(#a5a5a5, #31a1a1);
+}
+
+.slurp {
+    background: radial-gradient(#a5a5a5, #24e2a4);
+}
+
+.shadow {
+    background: radial-gradient(#a5a5a5, #6f6f6f);
+}
+
+.eipc {
+    background: radial-gradient(#a5a5a5, #b553f0);
+}
+
+.rare {
+    background: radial-gradient(#a5a5a5, #29adec);
+}
+
+.uncommon {
+    background: radial-gradient(#a5a5a5, #5fad1d);
+}
+
+.common {
+    background: radial-gradient(#e66465, #acacac);
 }
