--- a/templates/inscripcion/_form.html.twig
+++ b/templates/inscripcion/_form.html.twig
@@ -3,7 +3,7 @@
 <div class="container-fluid mt-1">
     <div class="row justify-content-center mt-4 mb-5 row-form-inscribe">
         <div class="col-5 mt-5">
-            <div class="card">
+            <div class="card-blanca">
                 <div class="card-header text-center texto-no-torneos">
                     INSCRIPCIÓN A TORNEO
                 </div>
