--- a/templates/inscripcion/show.html.twig
+++ b/templates/inscripcion/show.html.twig
@@ -8,7 +8,7 @@
 <div class="container-fluid mt-1">
     <div class="row justify-content-center mt-4 mb-5 row-form-inscribe">
         <div class="col-5 mt-5">
-            <div class="card">
+            <div class="card-blanca">
                 <div class="card-header text-center texto-no-torneos">
                     <h1>¡ INSCRIPCIÓN COMPLETADA ! <i class="fas fa-check-circle text-success"></i></h1>
                 </div>
