--- a/templates/mensaje/show.html.twig
+++ b/templates/mensaje/show.html.twig
@@ -8,7 +8,7 @@
     <div class="container-fluid mt-1">
         <div class="row justify-content-center mt-1 row-mensaje">
             <div class="col-5">
-                <div class="card">
+                <div class="card-blanca">
                     {% if mensaje %}
                         <div class="card-header text-center texto-no-torneos">
                            MENSAJE PARA : {{ receptor.nombre }}
