--- a/templates/usuario/show.html.twig
+++ b/templates/usuario/show.html.twig
@@ -44,11 +44,25 @@
                                             class="fas fa-envelope"></i>
                                 </button>
                             </a>
-
                             <a class="link-iconos" href="#">
-                                <button type="button" class="btn btn-outline-dark me-1"><i class="fas fa-user-plus"></i>
+                                <button data-bs-toggle="modal" data-bs-target="#exampleModal" type="button" class="btn btn-outline-dark me-1"><i class="fas fa-user-plus"></i>
                                 </button>
                             </a>
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">¿ Agregar a {{ usuario.nombre }} como amigo ?</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">No</button>
+                                            <button type="button" class="btn btn-success">Enviar solicitud</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </td>
                         {% endif %}
                     </tr>
